# Colorful_IO

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Colorful_IO.hpp  Colors.hpp
src/: CMakeLists.txt  Colorful_IO.cpp
tests/: CMakeLists.txt  colorful_io_ut.cpp  main.cpp
